--- a/css/img_box.css
+++ b/css/img_box.css
@@ -4,3 +4,16 @@
   left: 0;
   z-index: 5;
 }
+
+@media (max-width: 1024px) {
+  #img_box {
+    display: none;
+  }
+}
+
+@media (max-width: 1200px) {
+  #img_box img {
+    margin-top: 60px;
+    width: 70%;
+  }
+}
