--- a/css/section.css
+++ b/css/section.css
@@ -636,6 +636,7 @@
   }
 
   #section_1_mobile {
+    width: 100%;
     background: url("../img/img_main_bg_mobile.svg") no-repeat;
     background-size: cover;
     color: #fff;
@@ -691,7 +692,7 @@
   #section_1_mobile .bg_text .txt_wrap_1 .txt_2 {
     font: 500 44px "Noto Sans KR", sans-serif;
     line-height: 54px;
-    margin-bottom: 0.75rem;
+    margin-bottom: 2.75rem;
   }
 
   #section_1_mobile .bg_text .img_wrap .wrap_1 {
@@ -932,6 +933,7 @@
     margin-top: -0.625rem;
     margin-left: 1.063rem;
   }
+
   /* section_3 */
   #section_3 .graphBox .graphBox__right {
     margin: 10% 0 18% 0;
@@ -1212,10 +1214,12 @@
   #section_6 .inner .graphBox__right .question_wrap .wrap .question_txt_1,
   #section_6 .inner .graphBox__right .question_wrap .wrap .question_txt_2 {
     padding: 1.875rem 0 1.875rem 0.9375rem;
+    word-break: keep-all;
   }
 
   #section_6 .inner .graphBox__right .question_wrap .wrap .question_txt_3 {
     padding: 0.9375rem;
+    word-break: keep-all;
   }
 
   /* section_7*/
@@ -1238,6 +1242,142 @@
 
   footer .inner .box .notice {
     white-space: pre-line;
+  }
+}
+
+@media (max-width: 720px) {
+  @keyframes s2Move {
+    from {
+      top: 52%;
+      left: 65%;
+    }
+    to {
+      top: 52%;
+      left: 19%;
+    }
+  }
+}
+
+@media (max-width: 639px) {
+  #section_1_mobile .bg_text .img_wrap .wrap_1 {
+    display: none;
+  }
+
+  #section_1_mobile .bg_text .img_wrap .wrap_2 {
+    display: block;
+    max-width: 480px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #section_4 .inner .graphBox__left .column_2 li a {
+    width: 125px;
+  }
+
+  @keyframes s2Move {
+    from {
+      top: 52%;
+      left: 65%;
+    }
+    to {
+      top: 52%;
+      left: 15%;
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  #section_2_mobile .graphBox .small_txt {
+    font: 300 13px "Noto Sans KR", sans-serif;
+    margin: 400px 0 0 75%;
+  }
+
+  @keyframes s2Move {
+    from {
+      top: 52%;
+      left: 65%;
+    }
+    to {
+      top: 52%;
+      left: 10%;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  @keyframes s2Move {
+    from {
+      top: 52%;
+      left: 65%;
+    }
+    to {
+      top: 52%;
+      left: 6%;
+    }
+  }
+}
+
+@media (max-width: 454px) {
+  #section_5 .inner .graphBox__right .right_box .mobile_table tr td {
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    width: 9.375rem;
+    height: 5.188rem;
+  }
+}
+
+@media (max-width: 450px) {
+  #section_2_mobile .graphBox__right .right_box .lg_bubble,
+  #section_4 .graphBox__right .right_box .lg_bubble {
+    padding: 20px 0 0 25px;
+    width: 320px;
+    height: 160px;
+    background-size: contain;
+  }
+
+  #section_2_mobile .graphBox__right .right_box .lg_bubble .small-bubble {
+    width: 280px;
+    background-size: contain;
+  }
+
+  #section_2_mobile .graphBox__right .right_box .lg_bubble .mobile_drop_1,
+  #section_2_mobile .graphBox__right .right_box .lg_bubble .mobile_drop_2 {
+    font: 700 17px "Noto Sans KR", sans-serif;
+  }
+
+  #section_2_mobile .graphBox__right .right_box .lg_bubble .box_1 span,
+  #section_2_mobile .graphBox__right .right_box .lg_bubble .box_2 {
+    font: 700 17px "Noto Sans KR", sans-serif;
+  }
+
+  #section_2_mobile .graphBox .small_txt {
+    margin: 400px 0 0 70%;
+  }
+
+  #section_2_mobile .inner .graphBox__right .right_box .small_txt,
+  #section_4 .inner .graphBox__right .right_box .small_txt {
+    font: 300 12px "Noto Sans KR", sans-serif;
+    margin-top: -1.625rem;
+    margin-left: 1.063rem;
+  }
+
+  #section_4 .inner .graphBox__left .column_2 li a {
+    width: 100px;
+  }
+
+  #section_4 .graphBox__right .right_box .lg_bubble .small-bubble {
+    width: 280px;
+    background-size: contain;
+  }
+
+  #section_4 .graphBox__right .right_box .lg_bubble .box_1,
+  #section_4 .graphBox__right .right_box .lg_bubble .box_2 {
+    font: 700 17px "Noto Sans KR", sans-serif;
+  }
+
+  #section_6 .inner .graphBox__right .question_wrap .wrap {
+    width: 20.31rem;
   }
 }
 /* mobile end */
